fix(cuda12.1-ubuntu22): conda not found

--- a/cuda12.1/Dockerfile.ubuntu22.04
+++ b/cuda12.1/Dockerfile.ubuntu22.04
@@ -1,22 +1,32 @@
 from nvidia/cuda:12.1.0-devel-ubuntu22.04
 RUN apt update
-
+ENV DEBIAN_FRONTEND=noninteractive
 # xfce+tightvnvsercer
-RUN apt install xfce4 xfce4-terminal xvfb tightvncserver vim wget git sudo default-jdk openssh-server -y && apt-get clean
+RUN apt-get update && \
+    apt-get install -y xfce4 xfce4-terminal xvfb tightvncserver expect vim wget git sudo default-jdk && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
+# donload pkgs
 RUN wget https://mirrors.tuna.tsinghua.edu.cn/anaconda/miniconda/Miniconda3-py310_23.11.0-2-Linux-x86_64.sh
-RUN bash Miniconda3-py310_23.11.0-2-Linux-x86_64.sh -b -p /opt/miniconda3
-RUN source ~/.bashrc
-
 RUN wget https://mirror.sjtu.edu.cn/pytorch-wheels/cu121/torch-2.1.2%2Bcu121-cp310-cp310-linux_x86_64.whl
-RUN pip install torch-2.1.2+cu121-cp310-cp310-linux_x86_64.whl torchaudio torchvision -f https://mirror.sjtu.edu.cn/pytorch-wheels/torch_stable.html
-RUN pip install pandas transformers tensorboard jupyter -i https://mirror.sjtu.edu.cn/pypi/web/simple/
-
 RUN wget https://download-cdn.jetbrains.com/python/pycharm-community-2023.3.2.tar.gz
+
+# install miniconda
+RUN bash Miniconda3-py310_23.11.0-2-Linux-x86_64.sh -b -p /opt/miniconda3
+RUN . /opt/miniconda3/bin/activate && \
+    pip install torch-2.1.2+cu121-cp310-cp310-linux_x86_64.whl torchaudio torchvision pandas transformers tensorboard jupyter
+
+
 RUN tar -xvf pycharm-community-2023.3.2.tar.gz
 RUN mv pycharm-community-2023.3.2 /opt/pycharm
 
+# remove pkgs
 RUN rm torch-2.1.2+cu121-cp310-cp310-linux_x86_64.whl Miniconda3-py310_23.11.0-2-Linux-x86_64.sh pycharm-community-2023.3.2.tar.gz
 
+# config entrypoint
+COPY entrypoint /
+RUN /entrypoint/set.sh
+RUN cat entrypoint.sh >> /opt/nvidia/nvidia_entrypoint.sh
 
 ENTRYPOINT ["/opt/nvidia/nvidia_entrypoint.sh"]
