--- a/cuda12.1/Dockerfile.ubuntu22.04
+++ b/cuda12.1/Dockerfile.ubuntu22.04
@@ -26,6 +26,8 @@ RUN wget https://mirrors.tuna.tsinghua.edu.cn/anaconda/miniconda/Miniconda3-py31
 RUN wget https://download-cdn.jetbrains.com/python/pycharm-community-2023.3.2.tar.gz && \
     tar -xvf pycharm-community-2023.3.2.tar.gz && \
     mv pycharm-community-2023.3.2 /opt/pycharm && \
+    mkdir /root/Desktop && \
+    cp /entrypoint/pycharm.desktop /root/Desktop/pycharm.desktop && \
     rm pycharm-community-2023.3.2.tar.gz
 
 # config entrypoint
