--- a/cuda12.1/Dockerfile.ubuntu22.04
+++ b/cuda12.1/Dockerfile.ubuntu22.04
@@ -26,12 +26,12 @@ RUN wget https://mirrors.tuna.tsinghua.edu.cn/anaconda/miniconda/Miniconda3-py31
 RUN wget https://download-cdn.jetbrains.com/python/pycharm-community-2023.3.2.tar.gz && \
     tar -xvf pycharm-community-2023.3.2.tar.gz && \
     mv pycharm-community-2023.3.2 /opt/pycharm && \
-    mkdir /root/Desktop && \
-    cp /entrypoint/pycharm.desktop /root/Desktop/pycharm.desktop && \
     rm pycharm-community-2023.3.2.tar.gz
 
 # config entrypoint
 COPY entrypoint /entrypoint
-RUN cp /entrypoint/entrypoint.sh /opt/nvidia/nvidia_entrypoint.sh
+RUN mkdir /root/Desktop && \
+    cp /entrypoint/pycharm.desktop /root/Desktop/pycharm.desktop && \
+    cp /entrypoint/entrypoint.sh /opt/nvidia/nvidia_entrypoint.sh
 
 ENTRYPOINT ["/opt/nvidia/nvidia_entrypoint.sh"]
