fix(cuda12.1): pycharm icon

--- a/cuda12.1/entrypoint/pycharm.desktop
+++ b/cuda12.1/entrypoint/pycharm.desktop
@@ -3,7 +3,9 @@ Version=1.0
 Name=PyCharm
 Comment=IDE for Python
 Exec=/opt/pycharm/bin/pycharm.sh
-Icon=/opt/pycharm/bin/pycharm.png 
+Icon=/opt/pycharm/bin/pycharm.png
 Terminal=false
 Type=Application
 Categories=Development;
+Path=
+StartupNotify=false
