--- a/cuda12.1/Dockerfile.local.ubuntu22.04
+++ b/cuda12.1/Dockerfile.local.ubuntu22.04
@@ -31,6 +31,8 @@ RUN rm /pkgs -rf
 
 # config entrypoint
 COPY entrypoint /entrypoint
-RUN cp /entrypoint/entrypoint.sh /opt/nvidia/nvidia_entrypoint.sh
+RUN mkdir /root/Desktop && \
+    cp /entrypoint/pycharm.desktop /root/Desktop/pycharm.desktop && \
+    cp /entrypoint/entrypoint.sh /opt/nvidia/nvidia_entrypoint.sh
 
 ENTRYPOINT ["/opt/nvidia/nvidia_entrypoint.sh"]
