--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - 
         name: Set Tag Name
-        run: echo "TAG_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV  # Set tag name to an environment variable
+        run: echo "TAG_NAME=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
       -
         name: Checkout
         uses: actions/checkout@v4
