--- a/LiteLoader/llonebot/Dockerfile
+++ b/LiteLoader/llonebot/Dockerfile
@@ -5,6 +5,4 @@ COPY config.txt setPort.sh /root/
 # 安装 LiteLoader-OnebotApi
 RUN mkdir -p /opt/QQ/resources/app/LiteLoader/plugins/LLOneBot && \
     curl -L -o /tmp/LLOneBot.zip https://mirror.ghproxy.com/https://github.com/LLOneBot/LLOneBot/releases/download/v3.11.2/LLOneBot.zip && \
-    unzip /tmp/LLOneBot.zip -d /opt/QQ/resources/app/LiteLoader/plugins/LLOneBot/ && \
-    rm /tmp/LLOneBot.zip
-
+    unzip /tmp/LLOneBot.zip -d /opt/QQ/resources/app/LiteLoader/plugins/LLOneBot/
