--- a/LiteLoader/llonebot/Dockerfile
+++ b/LiteLoader/llonebot/Dockerfile
@@ -1,7 +1,11 @@
 FROM initialencounter/liteloader:qq3.2.5-21453_ll1.0.3_
 
-COPY config.txt setPort.sh /root/
+COPY config.txt /root/
 
+COPY entrypoint.sh /etc/entrypoint.sh
 # 安装 LiteLoader-OnebotApi
 RUN mkdir -p /LiteLoader/plugins/LLOneBot && \
-    curl -L -o /tmp/LLOneBot.zip https://mirror.ghproxy.com/https://github.com/LLOneBot/LLOneBot/releases/download/v3.14.0/LLOneBot.zip
+    curl -L -o /tmp/LLOneBot.zip https://github.com/LLOneBot/LLOneBot/releases/download/v3.14.0/LLOneBot.zip
+
+# 设置容器启动时运行的命令
+ENTRYPOINT ["/etc/entrypoint.sh"]
