feat: cc-koiksi

--- a/LiteLoader/chronocat/koishi/Dockerfile
+++ b/LiteLoader/chronocat/koishi/Dockerfile
@@ -4,7 +4,8 @@ FROM initialencounter/liteloader:qq3.2.5-240305_ll1.0.3_cc0.2.4
 ENV AH=x64
 ENV NODE_VERSION="node-v20.11.1-linux-$AH"
 
-RUN curl -o $NODE_VERSION.tar.xz https://nodejs.org/dist/v20.11.1/$NODE_VERSION.tar.xz && \
+RUN apt-get update && apt-get install xz-utils && \
+    curl -o $NODE_VERSION.tar.xz https://nodejs.org/dist/v20.11.1/$NODE_VERSION.tar.xz && \
     # 解压并删除 nodejs 源文件
     tar -xvf $NODE_VERSION.tar.xz -C /usr/local/ && \
     rm $NODE_VERSION.tar.xz -f && \
