--- a/LiteLoader/chronocat/koishi/Dockerfile
+++ b/LiteLoader/chronocat/koishi/Dockerfile
@@ -13,7 +13,8 @@ RUN apt-get update && apt-get install xz-utils && \
     . /etc/profile && \
     npm i -g yarn && \
     # 克隆 koishi
-    git clone https://github.com/koishijs/koishi "/root/koishi" && \
+    cd /root && \
+    git clone https://github.com/koishijs/koishi "koishi" && \
     sed -Ei 's/(([[:space:]]*)maxPort.*)/\1\n\2host: 0.0.0.0/' /root/koishi/koishi.yml && \
     cd /root/koishi && \
     yarn
