fix: koishi.yml

--- a/LiteLoader/chronocat/koishi/Dockerfile
+++ b/LiteLoader/chronocat/koishi/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get update && apt-get install xz-utils && \
     npm i -g yarn && \
     # 克隆 koishi
     cd /root && \
-    git clone https://github.com/koishijs/koishi "koishi" && \
+    git clone https://github.com/koishijs/boilerplate "koishi" && \
     sed -Ei 's/(([[:space:]]*)maxPort.*)/\1\n\2host: 0.0.0.0/' /root/koishi/koishi.yml && \
     cd /root/koishi && \
     yarn
