--- a/LiteLoader/base/Dockerfile
+++ b/LiteLoader/base/Dockerfile
@@ -8,6 +8,7 @@ RUN curl -o /root/linuxqq.deb https://dldir1.qq.com/qqfile/qq/QQNT/Linux/QQ_3.2.
     # 下载LiteLoader
     curl -L -o /tmp/LiteLoaderQQNT.zip https://github.com/LiteLoaderQQNT/LiteLoaderQQNT/releases/download/1.0.3/LiteLoaderQQNT.zip && \
     mkdir -p /LiteLoader && \
+    sed -i '1s/^/require("\/LiteLoader");\n/' /opt/QQ/resources/app/app_launcher/index.js && \
 
     # 创建必要的目录
     mkdir -p ~/.vnc && \
