--- a/.github/workflows/cc-koishi.yml
+++ b/.github/workflows/cc-koishi.yml
@@ -1,10 +1,7 @@
-name: cc-koishi-docker-publish
+name: cc-koishi
 
 on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-      - 'cc*_koishi*' # Push events to matching v*, i.e. v1.0, v20.15.10
+  workflow_dispatch:
 
 jobs:
   docker:
@@ -34,4 +31,4 @@ jobs:
         with:
           context: LiteLoader/chronocat/koishi/.
           push: true
-          tags: initialencounter/liteloader:${{ env.TAG_NAME }}
+          tags: initialencounter/liteloader:cc-koishi
