--- a/.github/workflows/llonebot.yml
+++ b/.github/workflows/llonebot.yml
@@ -1,10 +1,7 @@
-name: cc-docker-publish
+name: llonebot
 
 on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-      - 'qq*_ll*_cc*' # Push events to matching v*, i.e. v1.0, v20.15.10
+  workflow_dispatch:
 
 jobs:
   docker:
@@ -32,6 +29,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: LiteLoader/chronocat/.
+          context: LiteLoader/llonebot/.
           push: true
-          tags: initialencounter/liteloader:${{ env.TAG_NAME }}
+          tags: initialencounter/liteloader:llonebot
