--- a/NapCat/Dockerfile
+++ b/NapCat/Dockerfile
@@ -4,7 +4,7 @@ COPY NapCat.linux.x64.zip /tmp/NapCat.linux.x64.zip
 
 # 安装Linux QQ
 RUN curl -o /root/linuxqq.deb https://dldir1.qq.com/qqfile/qq/QQNT/Linux/QQ_3.2.7_240410_amd64_01.deb && \
-    dpkg -i --force-depends /root/linuxqq.deb && apt-get -f install -y && rm /root/linuxqq.deb && \
+    dpkg -i --force-depends /root/linuxqq.deb && rm /root/linuxqq.deb && \
 
     # 安装 napcat
     unzip /tmp/NapCat.linux.x64.zip -d /root/ && \
@@ -18,5 +18,5 @@ RUN curl -o /root/linuxqq.deb https://dldir1.qq.com/qqfile/qq/QQNT/Linux/QQ_3.2.
 
 WORKDIR "/root"
 
-CMD ["exec", "supervisord"]
+CMD ["sh -c exec supervisord"]
 
