fix(koishi-bun): zip

--- a/koishi-bun/Dockerfile
+++ b/koishi-bun/Dockerfile
@@ -5,7 +5,15 @@ WORKDIR "/koishi"
 COPY boilerplate /koishi
 
 
-RUN cd /koishi && \
+RUN apt-get update && \
+    apt-get install -y \
+    zip unzip && \
+    apt clean && \
+    rm -rf \
+    /var/lib/apt/lists/* \
+    /tmp/* \
+    /var/tmp/* && \
+    cd /koishi && \
     bun install && \
     zip boilerplate.zip /koishi && \
     rm -rf /koishi
