--- a/baichuan/Dockerfile.ubuntu22.04
+++ b/baichuan/Dockerfile.ubuntu22.04
@@ -5,8 +5,6 @@ LABEL maintainer="initialencounter"
 LABEL description="cuda12.1"
 LABEL custom_message="cuda:12.1.0-devel-ubuntu22.04"
 
-RUN mkdir -p /root/.cache/
-COPY huggingface /root/.cache/
 RUN apt update
 ENV DEBIAN_FRONTEND=noninteractive
 # xfce+tightvnvsercer
@@ -25,6 +23,8 @@ RUN git clone https://github.com/baichuan-inc/Baichuan2 && \
     cd Baichuan2 && \
     . /opt/miniconda3/bin/activate && \
     sed -i 's/13B/7B/g' OpenAI_api.py && \
+    echo "flask" >> requirements.txt && \
     pip install -r requirements.txt
 
+RUN 
 ENTRYPOINT ["/opt/nvidia/nvidia_entrypoint.sh"]
