--- a/koishi/Dockerfile.debian
+++ b/koishi/Dockerfile.debian
@@ -8,7 +8,9 @@ RUN curl -L -o nodejs.tar.xz https://nodejs.org/dist/v20.16.0/node-v20.16.0-linu
 mkdir -p /usr/local/nodejs && \
 tar -xf nodejs.tar.xz -C /usr/local/nodejs && \
 ls /usr/local/nodejs && \
-echo "export PATH=\$PATH:/usr/local/nodejs/node-v20.16.0-linux-x64/bin" >> /etc/profile
+echo "export PATH=\$PATH:/usr/local/nodejs/node-v20.16.0-linux-x64/bin" >> /etc/profile && \
+source /etc/profile && \
+corepack enable
 
 # 下载koishi
 RUN version=$(curl -Ls "https://api.github.com/repos/koishijs/boilerplate/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/') && \
