chore(koishi-debian): drop never use file

--- a/koishi/debian/Dockerfile
+++ b/koishi/debian/Dockerfile
@@ -1,12 +1,15 @@
 FROM debian:latest
 
 COPY ./entrypoint.sh /
-RUN apt update && apt install ffmpeg chromium git xz-utils curl unzip -y
+RUN apt update && apt install ffmpeg chromium git xz-utils curl unzip -y && \
+    chmod +x /entrypoint.sh && \
+    rm -rf /var/lib/apt/lists/*
 
 # 克隆 nodejs
 RUN curl -L -o nodejs.tar.xz https://nodejs.org/dist/v20.16.0/node-v20.16.0-linux-x64.tar.xz && \
 mkdir -p /usr/local/nodejs && \
 tar -xf nodejs.tar.xz -C /usr/local/nodejs && \
+rm -f nodejs.tar.xz && \
 curl -L -o /usr/local/nodejs/node-v20.16.0-linux-x64/bin/yarn https://repo.yarnpkg.com/4.1.0/packages/yarnpkg-cli/bin/yarn.js && \
 chmod +x /usr/local/nodejs/node-v20.16.0-linux-x64/bin/yarn
 
