--- a/LiteLoader/base/Dockerfile
+++ b/LiteLoader/base/Dockerfile
@@ -1,14 +1,15 @@
 FROM initialencounter/liteloader:base
 COPY start.sh /root/
 
-# 安装Linux QQ_3.2.7_240428
-RUN curl -o /root/linuxqq.deb https://dldir1.qq.com/qqfile/qq/QQNT/Linux/QQ_3.2.7_240428_amd64_01.deb && \
+# 安装Linux QQ_3.2.12_240925
+RUN curl -o /root/linuxqq.deb https://dldir1.qq.com/qqfile/qq/QQNT/Linux/QQ_3.2.12_240925_amd64_01.deb && \
     dpkg -i /root/linuxqq.deb && apt-get -f install -y && rm /root/linuxqq.deb && \
 
     # 下载LiteLoader 1.1.1
-    curl -L -o /tmp/LiteLoaderQQNT.zip https://github.com/LiteLoaderQQNT/LiteLoaderQQNT/releases/download/1.1.1/LiteLoaderQQNT.zip && \
+    curl -L -o /tmp/LiteLoaderQQNT.zip https://github.com/LiteLoaderQQNT/LiteLoaderQQNT/releases/download/1.2.2/LiteLoaderQQNT.zip && \
     mkdir -p /LiteLoader && \
-    sed -i '1s/^/require("\/LiteLoader");\n/' /opt/QQ/resources/app/app_launcher/index.js && \
+    echo 'require("/LiteLoader");' > /opt/QQ/resources/app/app_launcher/llqqnt.js && \
+    sed -i 's|"main": "[^"]*"|"main": "./app_launcher/llqqnt.js"|' /opt/QQ/resources/app/package.json && \
 
     # 创建必要的目录
     mkdir -p ~/.vnc && \
