--- a/LiteLoader/chronocat/Dockerfile
+++ b/LiteLoader/chronocat/Dockerfile
@@ -2,12 +2,12 @@ FROM initialencounter/liteloader:latest
 
 # 替换启动脚本
 COPY entrypoint.sh /etc/entrypoint.sh
-RUN chmod +x /etc/entrypoint.sh
 
-# 预下载 Chronocat
-RUN curl -L -o /tmp/chronocat-llqqnt-engine-chronocat-api.zip https://github.com/chrononeko/chronocat/releases/download/v0.2.9/chronocat-llqqnt-engine-chronocat-api-v0.2.9.zip && \
-    curl -L -o /tmp/chronocat-llqqnt-engine-chronocat-event.zip https://github.com/chrononeko/chronocat/releases/download/v0.2.9/chronocat-llqqnt-engine-chronocat-event-v0.2.9.zip && \
-    curl -L -o /tmp/chronocat-llqqnt.zip https://github.com/chrononeko/chronocat/releases/download/v0.2.9/chronocat-llqqnt-v0.2.9.zip
+RUN chmod +x /etc/entrypoint.sh && \
+    version=v0.2.16 && \
+    curl -L -o /tmp/chronocat-llqqnt-engine-chronocat-api.zip https://github.com/chrononeko/chronocat/releases/download/$version/chronocat-llqqnt-engine-chronocat-api-$version.zip && \
+    curl -L -o /tmp/chronocat-llqqnt-engine-chronocat-event.zip https://github.com/chrononeko/chronocat/releases/download/$version/chronocat-llqqnt-engine-chronocat-event-$version.zip && \
+    curl -L -o /tmp/chronocat-llqqnt.zip https://github.com/chrononeko/chronocat/releases/download/$version/chronocat-llqqnt-$version.zip
 
 # 设置容器启动时运行的命令
 ENTRYPOINT ["/etc/entrypoint.sh"]
