feat(liteloader:base): timezone entrypoint
Signed-off-by: initialencounter <2911583893@qq.com>

--- a/LiteLoader/base-base/Dockerfile
+++ b/LiteLoader/base-base/Dockerfile
@@ -1,8 +1,11 @@
-FROM phusion/baseimage:jammy-1.0.2
+FROM ubuntu:23.10
 
 # 设置环境变量
-ENV DEBIAN_FRONTEND=noninteractive
-ENV VNC_PASSWD=vncpasswd
+ENV DEBIAN_FRONTEND=noninteractive \
+    VNC_PASSWD=vncpasswd \
+    TZ=Asia/Shanghai
+
+COPY start.sh /root/
 
 # 安装必要的软件包
 RUN apt-get update && apt-get install -y \
@@ -21,7 +24,10 @@ RUN apt-get update && apt-get install -y \
     libasound2 \
     fonts-wqy-zenhei \
     git \
-    gnutls-bin && \    
+    gnutls-bin \
+    tzdata && \
+    echo "${TZ}" > /etc/timezone && \ 
+    ln -sf /usr/share/zoneinfo/${TZ} /etc/localtime && \    
     apt autoremove -y && \
     apt clean && \
     rm -rf \
@@ -29,9 +35,14 @@ RUN apt-get update && apt-get install -y \
     /tmp/* \
     /var/tmp/* && \
 
+    # chmod
+    chmod +x /root/start.sh && \
+
     # 安装novnc
     git config --global http.sslVerify false && \
     git config --global http.postBuffer 1048576000 && \
     cd /opt && git clone https://github.com/novnc/noVNC.git && \
     cd /opt/noVNC/utils && git clone https://github.com/novnc/websockify.git && \
     cp /opt/noVNC/vnc.html /opt/noVNC/index.html
+
+ENTRYPOINT ["bash", "/root/start.sh"]
