--- a/LiteLoader/chronocat/Dockerfile
+++ b/LiteLoader/chronocat/Dockerfile
@@ -4,9 +4,11 @@ FROM initialencounter/liteloader:latest
 COPY entrypoint.sh /etc/entrypoint.sh
 
 RUN chmod +x /etc/entrypoint.sh && \
-    version=v0.2.16 && \
+    version=v0.2.19 && \
     curl -L -o /tmp/chronocat-llqqnt-engine-chronocat-api.zip https://github.com/chrononeko/chronocat/releases/download/$version/chronocat-llqqnt-engine-chronocat-api-$version.zip && \
     curl -L -o /tmp/chronocat-llqqnt-engine-chronocat-event.zip https://github.com/chrononeko/chronocat/releases/download/$version/chronocat-llqqnt-engine-chronocat-event-$version.zip && \
+    curl -L -o /tmp/chronocat-llqqnt.zip https://github.com/chrononeko/chronocat/releases/download/$version/chronocat-llqqnt-$version.zip && \
+    curl -L -o /tmp/chronocat-llqqnt-engine-crychiccat.zip https://github.com/chrononeko/chronocat/releases/download/$version/chronocat-llqqnt-engine-crychiccat-$version.zip && \
     curl -L -o /tmp/chronocat-llqqnt.zip https://github.com/chrononeko/chronocat/releases/download/$version/chronocat-llqqnt-$version.zip
 
 # 设置容器启动时运行的命令
